Update: fixed alignment

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -4,7 +4,7 @@
   transform: translateY(-50%);
   padding: 10px;
   margin-right: 25px;
-  right: 0;
+  left: 0;
   z-index: 100;
   text-align: right;
 }
